Add support for user-defined structs
The syntax is similar to function definition, with
"TYPE" keyword: `DEF TYPE MyType DO ... END`.

Types/structs can contain functions/methods. However,
the ability to fully use struct types as primitive
types is not implemented yet.

TODO: Add proper tests.

This big patch contains various fixes of previously
failing tests, so that now all are passing.